# aws-lambda-latex

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  handler.py  lambda_function.py  localtest.py  make.jl  pyproject.toml  serverless.yml  texlive.profile
.circleci/: config.yml
examples/article/: main.tex
examples/article-mmd/: main.tex
examples/beamer/: main.tex
examples/beamer-mmd/: main.tex  references.bib
lambdalatex/: __init__.py  lambda_function.py
lambdalatex-layer/: .dockerignore  Dockerfile  Makefile  README.md  install-tlmgr-packages.sh  serverless.yml  texlive.profile
test-input/: main.tex
tests/: Makefile  main-mmd6-article.tex  main-mmd6-beamer.tex  test_response_outputs.py
