[tool.poetry]
name = "lambdalatex"
version = "0.1.0"
description = ""
authors = ["Eric Chen <eric@ericnchen.com>"]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.9"
requests = "^2.22"
click = "^7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
